fix: Device flags parsing [wip]